--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ var build_map = function() {
             datamap.svg.selectAll('.datamaps-bubble').on('click', function(data) {
                 bubble_popup(data);
             });
+            redrawBubbles();
         }
     });
     bubble_map.bubbles(get_bubbles(), {
