--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta http-equiv="expires" content="0">
   <meta http-equiv="pragma" content="no-cache">
   <title>WW2 Visualization</title>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://d3js.org/queue.v1.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script src="//d3js.org/queue.v1.min.js"></script>
+  <script src="//d3js.org/topojson.v1.min.js"></script>
   <script src="c3.min.js"></script>
   <script src="datamaps.world.min.js"></script> <!-- documentation https://github.com/markmarkoh/datamaps -->
   <!-- Slider stylesheet -->
   <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="c3.min.css">
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+  <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <style>
   #content{
       margin:auto;
